넥사크로 개발 환경 및 샘플 소스 작성(계속 진행 예정) 프레임워크 환경 설정값 프로퍼티로 추출 라이센스 파일 갱신

--- a/rng-demo/src/main/webapp/nx/popup.html
+++ b/rng-demo/src/main/webapp/nx/popup.html
@@ -67,6 +67,7 @@
     <script src="./nexacrolib/component/extPrototype/Grid.js"></script>
     <script src="./nexacrolib/component/extPrototype/Popup.js"></script>
     <script src="./nexacrolib/component/extPrototype/Validation.js"></script>
+    <script src="./nexacrolib/component/extPrototype/Excel.js"></script>
     <script src="./nexacrolib/component/MultiCombo/MultiCombo.js"></script>
     <script src="./nexacrolib/component/CalMonth/CalMonth.js"></script>
     <script src="./nexacrolib/component/CalPeriod/CalPeriod.js"></script>
